integration javafx et le reste du code